[package]
name = "zesplot"
version = "0.1.0"
authors = ["Luuk Hendriks <mail@luukhendriks.eu>"]

[dependencies]
svg = "*"
ipnetwork = { version = "*", features = ["ipv6-iterator", "ipv6-methods"] }
num = "*"
clap = "*"
rand = "*"
serde = "1"
serde_derive = "1"

easy-csv = "0.3.2"
easy-csv-derive = "0.3.2"
csv = "0.15"

radix_trie = "*"
#treebitmap = "*"
treebitmap = {version = "*", path = "../treebitmap/"}

colored = "1.6"
