[package]
name = "zesplot"
version = "0.1.0"
authors = ["Luuk Hendriks <mail@luukhendriks.eu>"]

[dependencies]
svg = "0.5.10"
ipnetwork = "0.13.0"
num = "0.1.42"
clap = "2.31.2"
rand = "0.4.2"
serde = "1.0.36"
serde_derive = "1.0.36"
csv = "1.0.1"
radix_trie = "0.1.3"
treebitmap = {git="https://github.com/zesplot/treebitmap.git", branch="longest_match_mut"}
simplelog = "0.5.2"
log = "0.4.5"
flate2 = "1.0"
